concat both datasets

--- a/data.ipynb
+++ b/data.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "9158d273-3652-45de-b92b-b38b763a4ebc",
+   "execution_count": null,
+   "id": "72efc359-5127-4956-8f23-fc1e0827dfac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,47 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "868aabf8-aef9-4e74-9860-cd6a1ff2b682",
+   "metadata": {},
+   "source": [
+    "Combination of the two filtered dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a3e0dc12-7b13-43ff-886a-db4027c7fada",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Merged and saved as pubchem_and_drugbank_filtered.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read both CSV files\n",
+    "df1 = pd.read_csv(\"cleaned_data_drugbank.csv\")\n",
+    "df2 = pd.read_csv(\"cleaned_data_pubchem.csv\")\n",
+    "\n",
+    "# Combine them — stack rows from both files\n",
+    "merged = pd.concat([df1, df2], ignore_index=True)\n",
+    "\n",
+    "# Remove duplicates (optional, if the same rows appear in both)\n",
+    "merged = merged.drop_duplicates()\n",
+    "\n",
+    "# Export only the 'SMILES' column\n",
+    "merged['SMILES'].to_csv('pubchem_and_drugbank_filtered.csv', index=False)\n",
+    "\n",
+    "print(\"✅ Merged and saved as pubchem_and_drugbank_filtered.csv\")\n"
    ]
   }
  ],
