fix(scraping): drugbank scraping rerun

--- a/data.ipynb
+++ b/data.ipynb
@@ -32,6 +32,48 @@
   },
   {
    "cell_type": "raw",
+   "id": "5ed0c53a-3a7a-4b39-96a5-49cf1d668a9e",
+   "metadata": {},
+   "source": [
+    "Filtering Drugbank dataset based on SMILE index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "51c5c80a-5e05-4dfa-9344-abde5d861a78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ORIGINAL LEN: 159\n",
+      "NO SMILE DUP  LEN: 129\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "df = pd.read_csv(\"DrugBrank/drugbank_antifungal_details.csv\")\n",
+    "\n",
+    "print(f\"ORIGINAL LEN: {len(df)}\")\n",
+    "\n",
+    "\n",
+    "df = df.dropna(subset=[\"SMILES\"])\n",
+    "df = df.drop_duplicates(subset=\"SMILES\")\n",
+    "df = df[df[\"SMILES\"].str.lower() != \"not available\"]\n",
+    "\n",
+    "print(f\"NO SMILE DUP  LEN: {len(df)}\")\n",
+    "\n",
+    "df.to_csv(\"cleaned_data_drugbank.csv\", index=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
    "id": "868aabf8-aef9-4e74-9860-cd6a1ff2b682",
    "metadata": {},
    "source": [
@@ -40,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "id": "a3e0dc12-7b13-43ff-886a-db4027c7fada",
    "metadata": {},
    "outputs": [
@@ -48,7 +90,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Merged and saved as pubchem_and_drugbank_filtered.csv\n"
+      "✅ Merged and saved as pubchem_and_drugbank_filtered.csv\n",
+      "790\n"
      ]
     }
    ],
@@ -68,7 +111,42 @@
     "# Export only the 'SMILES' column\n",
     "merged['SMILES'].to_csv('pubchem_and_drugbank_filtered.csv', index=False)\n",
     "\n",
-    "print(\"✅ Merged and saved as pubchem_and_drugbank_filtered.csv\")\n"
+    "print(\"✅ Merged and saved as pubchem_and_drugbank_filtered.csv\")\n",
+    "print(len(merged['SMILES']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "0000a429-beef-4e57-b4f0-1e481b340583",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Origin Count: 769\n",
+      "Unique SMILES count: 769\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"PubChem_compound_text_antifungal (2).csv\")\n",
+    "\n",
+    "\n",
+    "print(f\"Origin Count: {len(df)}\")\n",
+    "\n",
+    "df = df.drop_duplicates(subset='SMILES')\n",
+    "\n",
+    "print(\"Unique SMILES count:\", len(df))\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "d9445685-611f-422a-a9ed-928bcd21484a",
+   "metadata": {},
+   "source": [
+    "Cleaning ChemBL\n"
    ]
   }
  ],
